Fix huge bugs on mobile version

--- a/public/frontend/css/slider-range-dreams.css
+++ b/public/frontend/css/slider-range-dreams.css
@@ -129,6 +129,7 @@
     .handle-tooltip-inner{
         font-weight: bold;
         opacity: 1;
+        background-color: rgba(191,191,191, 1);
     }
     .track4{
         opacity: 1;
